# CCaaS

./: .gitignore  CMakeLists.txt  MultiModelConfig.xml  README.md  Storage_config.xml  TaaS_config.xml  config.xml  main.cpp
go/ycsb/: README.md  go.mod  go.sum
go/ycsb-failed/: go.mod  go.sum
go/ycsb-failed/cmd/go-ycsb/: client.go  shell.go
go/ycsb-failed/db/aerospike/: db.go
go/ycsb-failed/db/boltdb/: db.go
go/ycsb-failed/db/foundationdb/: db.go
go/ycsb-failed/db/minio/: db.go
go/ycsb-failed/db/mongodb/: db.go
go/ycsb-failed/db/pg/: db.go
go/ycsb-failed/db/redis/: db.go
go/ycsb-failed/db/rocksdb/: db.go
go/ycsb-failed/db/taas-tikv/: raw.go  txn.go
go/ycsb-failed/db/tikv/: txn.go
go/ycsb-failed/pkg/client/: client.go  dbwrapper.go
go/ycsb-failed/pkg/generator/: acknowledged_counter.go  scrambled_zipfian.go  skewedlatest.go
go/ycsb-failed/pkg/measurement/: histogram.go  histograms.go
go/ycsb-failed/pkg/util/: core.go
go/ycsb-failed/pkg/workload/: core.go
go/ycsb-failed/taas_proto/: client.pb.h  message.pb.go  message.proto  node.pb.h  server.pb.go  storage.pb.go  storage.pb.h  storage.proto  transaction.pb.go  transaction.pb.h
go/ycsb-failed/workloads/: workloadb
go/ycsb/cmd/go-ycsb/: main.go
go/ycsb/db/badger/: db.go
go/ycsb/db/basic/: db.go
go/ycsb/db/cassandra/: db.go
go/ycsb/db/dynamodb/: db.go
go/ycsb/db/elasticsearch/: db.go
go/ycsb/db/etcd/: db.go
go/ycsb/db/mysql/: db.go
go/ycsb/db/pegasus/: db.go
go/ycsb/db/spanner/: db.go
go/ycsb/db/sqlite/: db.go
go/ycsb/db/taas-tikv/: db.go  txn.go
go/ycsb/db/tikv/: db.go  raw.go  txn.go
go/ycsb/pkg/generator/: histogram.go  zipfian.go
go/ycsb/pkg/measurement/: measurement.go
go/ycsb/taas_proto/: client.pb.go  message.pb.h  node.pb.go  server.pb.h  server.proto  transaction.proto
go/ycsb/workloads/: workloada  workloadd  workloadf
include/common/: byte_iterator.h  exception.h  fnv_hash.h  random_double.h  random_uint64.h  thread_local_store.h  timer.h
include/db/: db_interface.h  leveldb_connection.h  phmap.h  phmap_connection.h  rocksdb_connection.h
include/epoch/: epoch_manager.h  epoch_manager_multi_master.h  epoch_manager_sharding.h  merge.h  two_phase_commit.h  worker.h
include/generator/: acknowledge_counter_generator.h  counter_generator.h  discrete_generator.h  generator.h  scrambled_zipfian_generator.h  uniform_long_generator.h  zipfian_generator.h
include/hbase_server/: THBaseService.h  hbaseHandler.h  hbase_types.h
include/leveldb_server/: leveldb_server.h  rocksdb_connection.h
include/message/: epoch_message_receive_handler.h  epoch_message_send_handler.h  handler.h  handler_receive.h  handler_send.h  message.h  transmit.h  twoPC_message_receive_handler.h  twoPC_message_send_handler.h
include/proto/: client.proto  kvdb_server.proto  message.proto  node.proto  protoc  server.proto  storage.proto  transaction.proto
include/storage/: backup.h  hbase.h  kvdb.h  leveldb.h  leveldb_server.h  mot.h  nebula.h  redo_loger.h  rocksdb_connection.h  tikv.h
include/test/: test.h
include/tools/: atomic_counters.h  blocking_concurrent_queue.hpp  blocking_mpmc_queue.h  concurrent_hash_map.h  context.h  thread_pool.h  thread_pool_light.h  tinyxml2.h  utilities.h  zeromq.h
include/transaction/: crdt_merge.h  merge.h  two_phase_commit.h
include/utils/: atomic_counters.h  concurrent_hash_map.h  context.h  utilities.h
include/worker/: worker_epoch_manager.h  worker_epoch_merge.h  worker_message.h  worker_storage.h
include/workload/: kv.h  mot.h  multi_model_workload.h  nebula.h  txn_generate.h  txn_type.h  worker.h
proto/: client.proto  transaction.proto
rust/tikv_client/: Makefile
src/: CMakeLists.txt  message_handler.cpp  message_transmit.cpp  message_transmit_clients.cpp  message_transmit_servers.cpp  message_transmit_storages.cpp  txn_worker.cpp
src/epoch/: epoch_manager.cpp  epoch_manager_multi_master.cpp  epoch_manager_sharding.cpp  merge.cpp  two_phase_commit_manager.cpp  worker.cpp
src/hbase_server/: THBaseService.cpp  hbaseHandler.cpp  hbase_types.cpp
src/leveldb_server/: leveldb_server.cpp
src/message/: epoch_message_receive_handler.cpp  epoch_message_send_handler.cpp  handler.cpp  handler_receive.cpp  handler_send.cpp  message.cpp  message_transmit_clients.cpp  message_transmit_servers.cpp  message_transmit_storages.cpp  transmit.cpp  twoPC_message_receive_handler.cpp  twoPC_message_send_handler.cpp
src/storage/: backup.cpp  hbase.cpp  leveldb.cpp  mot.cpp  nebula.cpp  redo_loger.cpp  tikv.cpp
src/test/: scrambled_zipfian_generator_tests.cpp  test.cpp  test_leveldb.cpp
src/tikv_client/: tikv_client.cpp
src/tools/: atomic_counters.cpp  context.cpp  tinyxml2.cpp  utilities.cpp
src/transaction/: crdt_merge.cpp  merge.cpp  two_phase_commit.cpp
src/utils/: atomic_counters.cpp  concurrent_hash_map.cpp  context.cpp  tinyxml2.cpp  utilities.cpp
src/worker/: worker_epoch_manager.cpp  worker_epoch_merge.cpp  worker_message.cpp  worker_storage.cpp
src/workload/: kv.cpp  mot.cpp  multi_model_workload.cpp  nebula.cpp  txn_graph_generate.cpp  txn_kv_generate.cpp  txn_sql_generate.cpp  workers.cpp
